fixed button dark mode

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,4 +1,3 @@
-
 .home__header{
     background-color: #000000;
     color: var(--colorVerde);
@@ -66,12 +65,6 @@
 .home__header__box--login nav ul li a p{
     display: none;
 }
-#darkMode{
-    font-size: 8px;
-    letter-spacing: -0.5px;
-    display: none;
-}
-
 
 .home__header__box--login nav ul li a p,.home__header__box--login nav ul li a i{
     color: var(--colorVerde);
@@ -101,10 +94,7 @@
 .home__header__box__categorias--nav ul li a:hover{
     color: var(--colorVerde);
 }
-.home__header__switch--mode{
-    background-color: #000000;
-    border: none;
-}
+
 .home__header__box--tema i{
     rotate: 90deg;
     
@@ -287,10 +277,7 @@
         right: 8px;
         
     }
-    #darkMode{
-        display: block;
-        font-size: 0.7rem;
-    }
+   
     #userlogin__p{
         font-size: 14px;
     }
@@ -334,7 +321,5 @@
     .home_header_box--barra{
         width: 50%;
     }
-    #darkMode{ 
-        font-size: 0.9rem;
-    }
+   
 }
