--- a/public/stylesheets/modoClaro.css
+++ b/public/stylesheets/modoClaro.css
@@ -1,7 +1,57 @@
-body.dia{
-    background-color: var(--colorBackground) ;
+/* Estilos para el interruptor */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 25px;
+  top: 25px;
 }
-body.noche{
 
-    background-color: var(--gris4);
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--colorVerde);
+  border-radius: 34px;
+  transition: background-color 0.4s ease;
+}
+.slider::before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  border-radius: 50%;
+  background-color: #fff;
+  transition: transform 0.4s ease;
+}
+
+/* Cambios en el interruptor cuando está en estado "encendido" */
+input:checked + .slider {
+  background-color: var(--colorVerde);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 10px var(--colorVerde)
+}
+
+input:checked + .slider::before {
+  transform: translateX(15px);
+}
+
+body.dia {
+  background-color: var(--colorBackground);
+}
+body.noche {
+  background-color: var(--gris4);
 }
